hphp/hack/test/typecheck/await_in_expressions10.php.exp
File "await_in_expressions10.php", line 4, characters 16-22:
Await cannot be used as an expression (Parsing[1002])
